# arcade-ai

./: .pre-commit-config.yaml
contrib/common/: pyproject.toml
contrib/common/common_arcade/: auth.py  exceptions.py  manager.py  utils.py
contrib/common/tests/: conftest.py  test_manager.py
contrib/crewai/: README.md  pyproject.toml
contrib/crewai/crewai_arcade/: manager.py  structured.py
contrib/crewai/tests/: structured_tool_test.py  test_manager.py
examples/crewai/: .env.example  agent_crewai.py  pyproject.toml
examples/crewai/1. tool-example/: agent_crewai.py
examples/crewai/2. custom-auth-example/tools/: spotify_tools.py
examples/crewai/3. many-tools-example/: full-example.py
examples/crewai/custom_auth_example/: main.py
examples/crewai/many_tools_example/: full_example.py
examples/crewai/tool_example/: agent_crewai.py
toolkits/zendesk/: Makefile  README.md  pyproject.toml  worker.toml
toolkits/zendesk/arcade_zendesk/: __init__.py  utils.py
toolkits/zendesk/arcade_zendesk/tools/: __init__.py  search_articles.py
toolkits/zendesk/evals/: eval_zendesk.py
toolkits/zendesk/tests/: conftest.py  test_search_articles.py  test_utils.py
